--- a/css/website.css
+++ b/css/website.css
@@ -9,7 +9,7 @@
   /* filter:blur(5px); */
 }
 
-header {
+/* header {
   margin-top: 3em;
   text-align: center;
   color: white;
@@ -18,7 +18,7 @@ header {
 header h1 {
   font-size: 2em;
   font-weight: 900;
-}
+} */
 
 .modal-window {
   position: fixed;
@@ -117,4 +117,22 @@ div.columns {
   color: black;
   
   /* transform: rotateX(150deg); */
+}
+
+.navbar {
+  background-color: #cd1111; /* Adjust the background color as needed */
+  /* padding: 10px; */
+}
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  background-color: aqua;
+}
+
+.navbar-item {
+  display: flex;
+  align-items: center;
 }
